--- a/DP.Creational/DP.Creational.csproj
+++ b/DP.Creational/DP.Creational.csproj
@@ -55,7 +55,12 @@
     <Compile Include="Builder\IBuilder.cs" />
     <Compile Include="Builder\CarBuilder.cs" />
     <Compile Include="Builder\VanBuilder.cs" />
+    <Compile Include="FactoryMethod\VanFactory.cs" />
+    <Compile Include="FactoryMethod\CarFactory.cs" />
+    <Compile Include="FactoryMethod\VehicleFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Prototype\VehicleManager.cs" />
+    <Compile Include="Singleton\SerialNumberGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Domain\DP.Domain.csproj">
@@ -63,6 +68,7 @@
       <Name>DP.Domain</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
